--- a/app/css/home.css
+++ b/app/css/home.css
@@ -1,7 +1,11 @@
-body {
+/*body {
   height: 100vh;
   width: 100vw;
   padding: 1%;
+}*/
+
+body {
+  padding-top: 79px;
 }
 
 .divider {
@@ -13,21 +17,37 @@ body {
   margin-left: -1%;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, .navbar-brand {
   font-family: 'Play', sans-serif;
 }
 
 h1 {
   font-size: 3em;
+  margin-top: -5px;
+  color: white;
+}
+
+.navbar a:hover, .navbar a:focus {
+  text-decoration: none;
+  color: gray;
+}
+
+.navbar.navbar-inverse.navbar-fixed-top {
+  height: 80px;
+  background-color: #482876;
 }
 
 h3 {
   font-size: 2em;
 }
 
+.map-wrapper {
+  padding: 0;
+}
+
 #map-canvas {
-  height: 75vh;
-  width: 70vw;
+  height: 95vh;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
@@ -80,21 +100,8 @@ input[type=checkbox]:not(:checked) ~ span {
 /* Media Query */
 
 @media only screen and (max-width: 990px) {
-  #map-canvas {width: 95vw; margin-right: 1%; }
-}
-
-@media only screen and (max-width: 990px) {
   h1, h3 { font-size: 2em; }
-}
-
-@media only screen and (max-height: 500px) {
-  #map-canvas {height: 50vh; }
-}
-
-@media only screen and (max-width: 990px) {
+  h1 { margin-top: 0; }
   .map-filters p { font-size: .9em; }
-}
-
-@media only screen and (max-width: 990px) {
   .map-filters p label { font-size: .9em; }
 }
