--- a/app/views/home.html
+++ b/app/views/home.html
@@ -3,7 +3,6 @@
   <div class="row">
 
     <div class="map-wrapper col-md-9 col-sm-12 col-xs-12">
-
       <div id="map-canvas"></div>
     </div>
 
@@ -21,6 +20,7 @@
           </div>
         </form>
       </div>
+      <div class="divider"></div>
       <div class="map-options">
         <h3>Filter Noise Types</h3>
 
