--- a/app/css/home.css
+++ b/app/css/home.css
@@ -41,15 +41,25 @@ h3 {
   font-size: 2em;
 }
 
+.map-home.row {
+  background-color: #5DD9C1;
+}
+
 .map-wrapper {
   padding: 0;
+  background-color: #5DD9C1;
+  height: 100%;
 }
 
 #map-canvas {
-  height: 95vh;
+  height: 88.5vh;
   width: 100%;
   margin: 0;
   padding: 0;
+}
+
+.map-filters {
+  background-color: white;
 }
 
 .map-filters p {
@@ -104,4 +114,5 @@ input[type=checkbox]:not(:checked) ~ span {
   h1 { margin-top: 0; }
   .map-filters p { font-size: .9em; }
   .map-filters p label { font-size: .9em; }
+  #map-canvas { border-bottom: solid #5DD9C1 15px;}
 }
