--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,6 @@
 <div ng-controller="homeController">
 
-  <div class="row">
+  <div class="map-home row">
 
     <div class="map-wrapper col-md-9 col-sm-12 col-xs-12">
       <div id="map-canvas"></div>
