--- a/app/views/map.html
+++ b/app/views/map.html
@@ -1,28 +1,32 @@
 <div ng-controller="mapController">
 
-  <div class="row">
+  <div class="map-home row">
 
-    <div class="col-md-9 col-sm-12 col-xs-12">
-
+    <div class="map-wrapper col-md-9 col-sm-12 col-xs-12">
       <div id="map-canvas"></div>
-      <div class="location-search">
-        <form>
-          <label for="locationSearch">Find Location:</label>
-          <input type="text" id="locationSearch" ng-model="locationSearch">
-          <button ng-click="findLocation()">Search</button> OR
-          <button ng-click="currentLocation()">Use Current Location</button>
-        </form>
-      </div>
-
     </div>
 
-    <div class="map-options">
-      <div class="map-filters col-md-3 col-sm-12 col-xs-12">
+    <div class="map-filters col-md-3 col-sm-12 col-xs-12">
+      <div class="location-search">
+        <form>
+          <div class="form-group">
+            <label for="locationSearch"><h3>Find Location</h3></label>
+            <input class="form-control" type="text" id="locationSearch" ng-model="locationSearch">
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary" ng-click="findLocation()">Search</button>
+            <strong>OR</strong>
+            <button class="btn btn-default" ng-click="currentLocation()">Use Current Location</button>
+          </div>
+        </form>
+      </div>
+      <div class="divider"></div>
+      <div class="map-options">  
         <h3>Filter Noise Types</h3>
 
         <label>
           <input type="checkbox" checked="true" ng-click="toggleNoises('transit')"></input>
-          <span class="glyphicon glyphicon-road clicked"></span>
+          <span class="glyphicon glyphicon-leaf clicked"></span>
           Transit
         </label>
         <label>
@@ -67,7 +71,7 @@
         </label>
         <label>
           <input type="checkbox" checked="true" ng-click="toggleNoises('demolition')"></input>
-          <span class="glyphicon glyphicon-wrench clicked"></span>
+          <span class="glyphicon glyphicon-warning-sign clicked"></span>
           Demolition
         </label>
         <label>
