--- a/app/css/home.css
+++ b/app/css/home.css
@@ -79,7 +79,7 @@ input[type="checkbox"] {
 .switch {
   width: 25%;
   height: 100%;
-  background-color: green;
+  background-color: #00cc00;
   display: inline-block;
   position: relative;
   border: 1px black solid;
@@ -89,7 +89,7 @@ input[type="checkbox"] {
 }
 
 .switched-off {
-  background-color: red;
+  background-color: #ff1919;
 }
 
 label {
