added change color ng-click to all layers

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -33,13 +33,13 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleNoises('dump')"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('dump');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-trash clicked"></span>
           </div>Dumps</label>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleNoises('fireStation')"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('fireStation');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-fire clicked"></span>
           </div>
@@ -47,7 +47,7 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleNoises('college')"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('college');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-pencil clicked"></span>
           </div>
@@ -55,7 +55,7 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleNoises('school')"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('school');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-book clicked"></span>
           </div>
@@ -63,7 +63,7 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleNoises('policeStation')"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('policeStation');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-bullhorn clicked"></span>
           </div>
@@ -71,7 +71,7 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleNoises('hospital')"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('hospital');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-plus-sign clicked"></span>
           </div>
@@ -79,7 +79,7 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleNoises('bar')"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('bar');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-glass clicked"></span>
           </div>
@@ -87,7 +87,7 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleNoises('construction')"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('construction');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-wrench clicked"></span>
           </div>
@@ -95,7 +95,7 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleNoises('demolition')"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('demolition');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-wrench clicked"></span>
           </div>
@@ -103,7 +103,7 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleNoises('noiseComplaints')"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('noiseComplaints');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-phone-alt clicked"></span>
           </div>
@@ -111,7 +111,7 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleNoises('stadium')"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('stadium');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-volume-up clicked"></span>
           </div>
@@ -119,7 +119,7 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="checked" ng-click="toggleNoises('freeway')"></input>
+          <input type="checkbox" checked="checked" ng-click="toggleNoises('freeway');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-road clicked"></span>
           </div>
@@ -127,7 +127,7 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleNoises('heliportOrAirport')"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('heliportOrAirport');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-plane clicked"></span>
           </div>
