repositioned filter labels so they're centered

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -29,21 +29,23 @@
           <div class="switch">
             <span class="glyphicon glyphicon-road clicked"></span>
           </div>
-          Transit
+          <p>Transit</p>
         </label>
 
         <label>
           <input type="checkbox" checked="true" ng-click="toggleNoises('dump');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-trash clicked"></span>
-          </div>Dumps</label>
+          </div>
+          <p>Dumps</p>
+          </label>
 
         <label>
           <input type="checkbox" checked="true" ng-click="toggleNoises('fireStation');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-fire clicked"></span>
           </div>
-          Fire Stations
+          <p>Fire Stations</p>
         </label>
 
         <label>
@@ -51,7 +53,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-pencil clicked"></span>
           </div>
-          Colleges
+          <p>Colleges</p>
         </label>
 
         <label>
@@ -59,7 +61,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-book clicked"></span>
           </div>
-          Schools
+          <p>Schools</p>
         </label>
 
         <label>
@@ -67,7 +69,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-bullhorn clicked"></span>
           </div>
-          Police Stations
+          <p>Police Stations</p>
         </label>
 
         <label>
@@ -75,7 +77,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-plus-sign clicked"></span>
           </div>
-          Hospitals
+          <p>Hospitals</p>
         </label>
 
         <label>
@@ -83,7 +85,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-glass clicked"></span>
           </div>
-          Bars
+          <p>Bars</p>
         </label>
 
         <label>
@@ -91,7 +93,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-wrench clicked"></span>
           </div>
-          Construction
+          <p>Construction</p>
         </label>
 
         <label>
@@ -99,7 +101,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-wrench clicked"></span>
           </div>
-          Demolition
+          <p>Demolition</p>
         </label>
 
         <label>
@@ -107,7 +109,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-phone-alt clicked"></span>
           </div>
-          911 Noise Complaints
+          <p>911 Noise Complaints</p>
         </label>
 
         <label>
@@ -115,7 +117,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-volume-up clicked"></span>
           </div>
-          Stadiums
+          <p>Stadiums</p>
         </label>
 
         <label>
@@ -123,7 +125,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-road clicked"></span>
           </div>
-          Freeways
+          <p>Freeways</p>
         </label>
 
         <label>
@@ -131,7 +133,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-plane clicked"></span>
           </div>
-          Airports/Heliports
+          <p>Airports/Heliports</p>
         </label>
 
       </div>
