--- a/app/css/home.css
+++ b/app/css/home.css
@@ -77,8 +77,8 @@ input[type="checkbox"] {
 }
 
 .switch {
-  width: 25%;
-  height: 100%;
+  width: 80px;
+  height: 33px;
   background-color: #00cc00;
   display: inline-block;
   position: relative;
@@ -106,7 +106,23 @@ input[type="checkbox"] {
 
 label {
   display: block;
-  height: 4vh;
+  height: 35px;
+  /*position: relative;*/
+  /*display: inline;*/
+  /*border: 1px solid black;*/
+  /*margin: auto;
+  top: 10;
+  left: 10;*/
+}
+
+label p {
+  height: 35px;
+  padding-bottom: 10px;
+  font-size: 14pt;
+  display: inline;
+  position: absolute;
+  padding-top: 5px;
+  /*padding-top: -20px;*/
 }
 
 .glyphicon {
