updated media query selectors, removed soundwave svg

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -20,7 +20,7 @@
           </div>
         </form>
       </div>
-      <div class="divider"></div>
+      <!-- <div class="divider"></div> -->
       <div class="map-options">
         <h3>Filter Noise Types</h3>
 
