--- a/app/css/home.css
+++ b/app/css/home.css
@@ -169,10 +169,10 @@ input[type=checkbox]:not(:checked) ~ div span {
 /* Media Query */
 
 @media only screen and (max-width: 990px) {
-  h1, h3 { font-size: 2em; }
+  h1, h3 { font-size: 25pt; }
   h1 { margin-top: 0; }
-  .map-filters p { font-size: .9em; }
-  .map-filters p label { font-size: .9em; }
+  label p { font-size: 12pt; }
+  label p { font-size: 12pt; }
   #map-canvas { border-bottom: solid #5DD9C1 15px;}
 }
 
