showing error message if address isn't in seattle or isn't valid

--- a/app/css/map.css
+++ b/app/css/map.css
@@ -36,5 +36,5 @@ h1#firstHeading {
 }
 
 .bad-score { color: red; }
-.med-score { color: yellow; }
+.med-score { color: orange; }
 .good-score { color: green; }
