--- a/app/css/home.css
+++ b/app/css/home.css
@@ -154,6 +154,13 @@ input[type=checkbox]:not(:checked) ~ div span {
   background-color: gray;
 }
 
+.error-msg {
+  padding-top: 10px;
+  color: red;
+  font-weight: bold;
+  transition:;
+}
+
 
 /* Media Query */
 
