--- a/app/views/map.html
+++ b/app/views/map.html
@@ -12,6 +12,7 @@
           <div class="form-group">
             <label for="locationSearch"><h3>Find Location</h3></label>
             <input class="form-control" type="text" id="locationSearch" ng-model="locationSearch">
+            <div class="error-msg" ng-hide="!address_error">{{ address_error }}</div>
           </div>
           <div class="form-group">
             <button class="btn btn-primary" ng-click="findLocation()">Search</button>
