first pass at adding popovers

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -29,7 +29,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-road clicked"></span>
           </div>
-          <p>Transit</p>
+          <p tooltip-placement="right" tooltip="Hello!">Transit</p>
         </label>
 
         <label>
