--- a/app/css/home.css
+++ b/app/css/home.css
@@ -154,6 +154,11 @@ input[type=checkbox]:not(:checked) ~ div span {
   background-color: gray;
 }
 
+/* Per AngularUI Needs */
+.nav, .pagination, .carousel, .panel-title a {
+  cursor: pointer;
+}
+
 
 /* Media Query */
 
