added basic info popover for filter labels

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -30,7 +30,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-road clicked"></span>
           </div>
-          <p tooltip-placement="right" tooltip="Hello!">Transit</p>
+          <p tooltip-placement="right" tooltip="Bus and Streetcar Stops, Transit Centers">Transit</p>
         </label>
 
         <label>
@@ -94,7 +94,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-wrench clicked"></span>
           </div>
-          <p>Construction</p>
+          <p tooltip-placement="right" tooltip="Locations of active construction permits; updated daily">Construction</p>
         </label>
 
         <label>
@@ -102,7 +102,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-wrench clicked"></span>
           </div>
-          <p>Demolition</p>
+          <p tooltip-placement="right" tooltip="Locations of active demolition permits; updated daily">Demolition</p>
         </label>
 
         <label>
@@ -110,7 +110,7 @@
           <div class="switch">
             <span class="glyphicon glyphicon-phone-alt clicked"></span>
           </div>
-          <p>911 Noise Complaints</p>
+          <p tooltip-placement="right" tooltip="Most recent (approx six months) noise complaints called into 911; updated daily">911 Noise Complaints</p>
         </label>
 
         <label>
