toggling colors, sort of

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -36,7 +36,7 @@
         <label>
           <input type="checkbox" checked="true" ng-click="toggleHeatmap();changeColor($event)"></input>
           <div class="switch">
-            <span class="glyphicon glyphicon-off clicked"></span>
+            <span class="glyphicon glyphicon-adjust clicked"></span>
           </div>
           <p>Hide Heatmap</p>
         </label>
