--- a/app/views/map.html
+++ b/app/views/map.html
@@ -30,7 +30,9 @@
           <div class="switch">
             <span class="glyphicon glyphicon-road clicked"></span>
           </div>
-          <p tooltip-placement="right" tooltip="Bus and Streetcar Stops, Transit Centers">Transit</p>
+          <p>Transit
+            <img src="app/img/info_symbol.png" class="info" tooltip-placement="right" tooltip="Bus and streetcar stops, transit centers"/>
+          </p>
         </label>
 
         <label>
@@ -86,15 +88,19 @@
           <div class="switch">
             <span class="glyphicon glyphicon-glass clicked"></span>
           </div>
-          <p>Bars</p>
+          <p>Bars
+            <img src="app/img/info_symbol.png" class="info" tooltip-placement="right" tooltip="Includes some restaurants that double as bars"/>
+          </p>
         </label>
 
         <label>
           <input type="checkbox" checked="true" ng-click="toggleNoises('construction');changeColor($event)"></input>
           <div class="switch">
-            <span class="glyphicon glyphicon-wrench clicked"></span>
+            <span class="glyphicon glyphicon-warning-sign clicked"></span>
           </div>
-          <p tooltip-placement="right" tooltip="Locations of active construction permits; updated daily">Construction</p>
+          <p>Construction
+            <img src="app/img/info_symbol.png" class="info" tooltip-placement="right" tooltip="Locations of active, new construction permits; updated daily"/>
+          </p>
         </label>
 
         <label>
@@ -102,7 +108,9 @@
           <div class="switch">
             <span class="glyphicon glyphicon-wrench clicked"></span>
           </div>
-          <p tooltip-placement="right" tooltip="Locations of active demolition permits; updated daily">Demolition</p>
+          <p>Demolition
+            <img src="app/img/info_symbol.png" class="info" tooltip-placement="right" tooltip="Locations of active demolition permits; updated daily"/>
+          </p>
         </label>
 
         <label>
@@ -110,7 +118,9 @@
           <div class="switch">
             <span class="glyphicon glyphicon-phone-alt clicked"></span>
           </div>
-          <p tooltip-placement="right" tooltip="Most recent (approx six months) noise complaints called into 911; updated daily">911 Noise Complaints</p>
+          <p>911 Noise Complaints
+            <img src="app/img/info_symbol.png" class="info" tooltip-placement="bottom" tooltip="Recent noise complaints called into 911; updated daily"/>
+          </p>
         </label>
 
         <label>
