toggles all toggle together

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -26,20 +26,20 @@
         <h3>Filter Noise Types</h3>
 
         <label>
-          <input type="checkbox" checked="true" ng-click="toggleAll();changeColor($event)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleAll()"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-off clicked"></span>
           </div>
-          <p>Hide All</p>
+          <p>Show All Layers</p>
         </label>
 
-        <label>
+        <!-- <label>
           <input type="checkbox" checked="true" ng-click="toggleHeatmap();changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-adjust clicked"></span>
           </div>
           <p>Hide Heatmap</p>
-        </label>
+        </label> -->
 
         <hr>
 
