--- a/app/views/map.html
+++ b/app/views/map.html
@@ -25,23 +25,24 @@
       <div class="map-options">
         <h3>Filter Noise Types</h3>
 
-        <label>
-          <input type="checkbox" checked="true" ng-click="toggleAll()"></input>
-          <div class="switch">
-            <span class="glyphicon glyphicon-off clicked"></span>
+        <div class="global-filters">
+          <div class="btn-group btn-group-justified" role="group">
+            <div class="btn-group" role="group">
+              <button type="button" class="btn btn-default" ng-click="hideAll()">
+                Hide All Noises
+              </button>
+            </div>
+            <div class="btn-group" role="group">
+              <button type="button" class="btn btn-default" ng-click="showAll()">
+                Show All Noises
+              </button>
+            </div>
           </div>
-          <p>Show All Layers</p>
-        </label>
 
-        <!-- <label>
-          <input type="checkbox" checked="true" ng-click="toggleHeatmap();changeColor($event)"></input>
-          <div class="switch">
-            <span class="glyphicon glyphicon-adjust clicked"></span>
-          </div>
-          <p>Hide Heatmap</p>
-        </label> -->
-
-        <hr>
+          <button type="button" class="btn btn-default heatmap" ng-click="toggleHeatmap()">
+            Toggle Heatmap
+          </button>
+        </div>
 
         <label>
           <input type="checkbox" checked="true" ng-click="toggleNoises('transit');changeColor($event)"></input>
@@ -140,7 +141,7 @@
         </label>
 
         <label>
-          <input type="checkbox" checked="checked" ng-click="toggleNoises('freeway');changeColor($event)"></input>
+          <input type="checkbox" checked="true" ng-click="toggleNoises('freeway');changeColor($event)"></input>
           <div class="switch">
             <span class="glyphicon glyphicon-road clicked"></span>
           </div>
