reorganzing and cleaning up functions for toggling

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -39,9 +39,9 @@
             </div>
           </div>
 
-          <button type="button" class="btn btn-default heatmap" ng-click="toggleHeatmap()">
+          <!-- <button type="button" class="btn btn-default heatmap" ng-click="toggleHeatmap()">
             Toggle Heatmap
-          </button>
+          </button> -->
         </div>
 
         <label>
