--- a/app/views/map.html
+++ b/app/views/map.html
@@ -28,20 +28,20 @@
         <div class="global-filters">
           <div class="btn-group btn-group-justified" role="group">
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-default" ng-click="hideAll()">
+              <button type="button" class="btn btn-default" ng-click="hideAll()" ng-disabled="hideAllButton">
                 Hide All Noises
               </button>
             </div>
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-default" ng-click="showAll()">
+              <button type="button" class="btn btn-default" ng-click="showAll()" ng-disabled="showAllButton">
                 Show All Noises
               </button>
             </div>
           </div>
 
-          <!-- <button type="button" class="btn btn-default heatmap" ng-click="toggleHeatmap()">
+          <button type="button" class="btn btn-default btn-block" ng-click="toggleHeatmap()">
             Toggle Heatmap
-          </button> -->
+          </button>
         </div>
 
         <label>
