--- a/app/css/map.css
+++ b/app/css/map.css
@@ -3,8 +3,10 @@
 }
 
 .noises svg {
-  width: 20px;
-  height: 20px;
+  /*width: 20px;*/
+  /*height: 20px;*/
+  width: 400px;
+  height: 400px;
   /*background-color: cyan;*/
 }
 
