--- a/app/views/map.html
+++ b/app/views/map.html
@@ -15,13 +15,12 @@
             <div class="error-msg" ng-hide="!address_error">{{ address_error }}</div>
           </div>
           <div class="form-group">
-            <button class="btn btn-primary" ng-click="findLocation()">Search</button>
+            <button class="btn btn-info" ng-click="findLocation()">Search</button>
             <strong>OR</strong>
             <button class="btn btn-default" ng-click="currentLocation()">Use Current Location</button>
           </div>
         </form>
       </div>
-      <!-- <div class="divider"></div> -->
       <div class="map-options">
         <h3>Filter Noise Types</h3>
 
