--- a/app/views/map.html
+++ b/app/views/map.html
@@ -3,8 +3,12 @@
   <div class="map-home row">
 
     <div class="map-wrapper col-md-9 col-sm-12 col-xs-12">
-      <div id="map-canvas"></div>
+      <div id="map-canvas">
+
+      </div>
+      <div id="noise-descrip">{{ currentNoiseInfo }}</div>
     </div>
+
 
     <div class="map-filters col-md-3 col-sm-12 col-xs-12">
       <div class="location-search">
