--- a/app/css/home.css
+++ b/app/css/home.css
@@ -31,6 +31,16 @@ h1 {
   background-color: #383961;
 }
 
+.navbar-text.navbar-right {
+  margin-top: 2em;
+}
+
+.navbar-text.navbar-right a {
+  margin: 1em;
+  color: white;
+  font-size: 1.25em;
+}
+
 h3 {
   font-size: 23pt;
 }
@@ -194,6 +204,13 @@ input[type=checkbox]:not(:checked) ~ div span {
     height: 100%;
     overflow: visible;
   }
+}
+
+@media only screen and (max-width: 767px) {
+  .navbar.navbar-inverse.navbar-fixed-top { height: 100px; }
+  .navbar-text.navbar-right { margin-top: 1em; }
+  .navbar-text.navbar-right a { margin-left: 0; }
+  body { padding-top: 100px; }
 }
 
 /* Key Frames */
