--- a/app/css/home.css
+++ b/app/css/home.css
@@ -88,21 +88,21 @@ input[type="checkbox"] {
   margin-right: 1%;
   border-radius: 4px;
   z-index: 1;
-  animation-name: to_green;
+  animation-name: to_on;
   animation-duration: 1s;
-  -webkit-animation-name: to_green;
+  -webkit-animation-name: to_on;
   -webkit-animation-duration: 1s;
-  -moz-animation-name: to_green;
+  -moz-animation-name: to_on;
   -moz-animation-duration: 1s;
 }
 
 .switched-off {
   background-color: #ADACB5;
-  animation-name: to_red;
+  animation-name: to_off;
   animation-duration: .7s;
-  -webkit-animation-name: to_red;
+  -webkit-animation-name: to_off;
   -webkit-animation-duration: 0.7s;
-  -moz-animation-name: to_red;
+  -moz-animation-name: to_off;
   -moz-animation-duration: .7s;
 }
 
@@ -241,7 +241,7 @@ input[type=checkbox]:not(:checked) ~ div span {
   }
 }
 
-@keyframes to_red {
+@keyframes to_off {
   0% {
     background-color: #8681C6;
   }
@@ -250,7 +250,7 @@ input[type=checkbox]:not(:checked) ~ div span {
   }
 }
 
-@keyframes to_green {
+@keyframes to_on {
   0% {
     background-color: #ADACB5;
   }
@@ -285,7 +285,7 @@ input[type=checkbox]:not(:checked) ~ div span {
   }
 }
 
-@-webkit-keyframes to_red {
+@-webkit-keyframes to_off {
   0% {
     background-color: #8681C6;
   }
@@ -294,7 +294,7 @@ input[type=checkbox]:not(:checked) ~ div span {
   }
 }
 
-@-webkit-keyframes to_green {
+@-webkit-keyframes to_on {
   0% {
     background-color: #ADACB5;
   }
@@ -329,7 +329,7 @@ input[type=checkbox]:not(:checked) ~ div span {
   }
 }
 
-@-moz-keyframes to_red {
+@-moz-keyframes to_off {
   0% {
     background-color: #8681C6;
   }
@@ -338,7 +338,7 @@ input[type=checkbox]:not(:checked) ~ div span {
   }
 }
 
-@-moz-keyframes to_green {
+@-moz-keyframes to_on {
   0% {
     background-color: #ADACB5;
   }
