first pass at watch event for currentNoiseInfo

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -172,8 +172,8 @@
 
         <input type="text" ng-model="yourName" placeholder="Enter a name here">
         <h1 style="color:black;">Hello, {{ yourName }}!</h1>
-        <div id="noise-descrip">
-          <p ng-model="currentNoiseInfo">{{ currentNoiseInfo }}</p>
+        <div>
+          <p ng-model="currentNoiseInfo" id="noise-descrip">{{ currentNoiseInfo }}</p>
         </div>
       </div>
     </div>
